# bfs

./: .flake8  Makefile  README.md  coverage.lcov  docker-compose.yml  main.py  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json  post-install.sh
.github/workflows/: build-app.yml  build-test.yml  cloud-test.yml  codeql.yml
app/: search.py
cicd/: setup_conda_env.bat  teardown_conda_env.bat
core/: parser.py  search.py
data/: grid.txt
docker/streamlit/: Dockerfile
tests/: test_browser.py  test_parser.py  test_search.py  test_webpage.py
