[tool.briefcase]
project_name = "bfs"
bundle="com.mimetyx"
version = "0.1"
author = ["Brandon Corfman"] 
author_email = ["bcorfman@fastmail.fm"]
license = "MIT"
readme = "README.md"

[tool.briefcase.app.bfs]
formal_name = "BreadthFirstSearch"
description = "A non-trivial Python DevOps project, implementing search through a grid map."
sources = ['core']

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
yapf = "^0.32.0"
ipython = "^8.8.0"
coverage = "^7.0.2"
nuitka = "^1.3.5"
pysnooper = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

