[tool.poetry]
name = "bfs"
version = "0.1.0"
description = "A non-trivial Python DevOps project, implementing search through a grid map."
authors = ["Brandon Corfman <bcorfman@fastmail.fm>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"
yapf = "^0.32.0"
nuitka = {git = "https://github.com/Nuitka/Nuitka.git"}
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
