[project]
name = "bfs"
version = "0.3.0"
description = "A non-trivial Python DevOps project, implementing search through a grid map."
authors = [{name = "Brandon Corfman", email = "bcorfman@fastmail.fm"}]
dependencies = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
]
license = "MIT"
readme = "README.md"
requires-python = ">= 3.10"

[tool.rye.scripts]
bfs = { cmd = "python main.py" }

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
    "flake8>=7.0.0",
    "yapf>=0.40.2",
    "pytest-cov>=4.1.0",
    "pytest-playwright>=0.4.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bfs"]

[tool.yapf]
column_limit = 100
indent_dictionary_value = "True"
allow_split_before_dict_value = "False"
